--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@headlessui/vue": "^1.6.3",
     "@heroicons/vue": "^1.0.6",
     "core-js": "^3.8.3",
+    "pug": "^3.0.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.15"
   },
@@ -24,7 +25,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "vue-cli-plugin-pug": "~2.0.0"
   },
   "eslintConfig": {
     "root": true,
