--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "backend": "json-server --watch db/db.json"
   },
   "dependencies": {
     "@headlessui/vue": "^1.6.3",
     "@heroicons/vue": "^1.0.6",
     "core-js": "^3.8.3",
+    "json-server": "^0.17.0",
     "pug": "^3.0.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.15"
